# vapoursynth-zip

./: .gitignore  .gitmodules  LICENSE  README.md  adg.vpy  build.sh  build.zig  build.zig.zon  fast.c  foo.c  foo.zig  hatch_build.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: Linux.yml  Windows.yml  build.yaml  test.yml  vapoursynth.yml  windows-build.yml
build-help/: README.md  build.ps1  build.sh  cross_compile.sh
powershell/: RunWithBAT.ps1
src/: helper.zig  planeaverage.zig  planeminmax.zig  rfs.zig  vcl.zig  vszip.zig
src/filters/: adg.zig  bilateral.zig  bilateral_dither.zig  bilateral_dither_subspl.zig  boxblur.zig  boxblur_comptime.zig  boxblur_runtime.zig  checkmate.zig  clahe.zig  color_map.zig  comb_mask.zig  eedi3.zig  (+14 more)
test/: adaptive_binarize.vpy  bilateral.vpy  boxblur.vpy  build.ps1  checkmate.vpy  clahe.vpy  color_map.vpy  comb_mask.vpy  comb_mask_mt.vpy  limit_filter.vpy  limiter.vpy  metrics_ssimu2.vpy  packrgb.vpy  plane_props.vpy  planeminmax.vpy  props.vpy  rfs_mismatch.py  rfs_mismatch.vpy  ssimulacra2.vpy  test.vpy  test_all.ps1  test_all.sh
tests/: README.md  conftest.py  golden.py  helpers.py  test_adaptive_binarize.py  test_bilateral.py  test_bilateral_dither.py  test_boxblur.py  test_checkmate.py  test_clahe.py  test_colormap.py  test_combmask.py  test_compress.py  test_deband.py  test_eedi3.py  test_f16_parity.py  test_imageread.py  test_int_parity.py  test_limiter.py  test_mosquito.py  test_packrgb.py  test_planeaverage.py  test_planeminmax.py  test_rfs.py  test_ssimulacra2.py  test_xpsnr.py  test_xpsnr_ffmpeg.py
(+49 files in other folders)
