[build-system]
requires = ["hatchling>=1.29.0", "packaging", "ziglang==0.15.2"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-vszip"
description = "VapourSynth Zig Image Process"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["VapourSynth>=74"]
dynamic = ["version"]

[tool.hatch.version]
source = "regex"
path = "build.zig.zon"
pattern = '\.version\s*=\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "build.zig",
    "build.zig.zon",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/vszip"]
artifacts = [
    "vapoursynth/plugins/vszip/*.dylib",
    "vapoursynth/plugins/vszip/*.so",
    "vapoursynth/plugins/vszip/*.dll",
    "vapoursynth/plugins/vszip/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
